# kiteconnect-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Readme.md
examples/: .env.example  alerts_example.rs  login.rs  margins_example.rs  markets_example.rs  mf_example.rs  order_operations.rs  portfolio_example.rs  ticker_example.rs
examples/wasm-example/: Cargo.toml  README.md  index.html
examples/wasm-example/src/: lib.rs
examples/wasm-ticker/: .gitignore  Cargo.toml  Trunk.toml  index.html
examples/wasm-ticker/src/: lib.rs
src/: alerts.rs  compat.rs  connect.rs  constants.rs  http.rs  lib.rs  margins.rs  markets.rs  mf.rs  orders.rs  portfolio.rs  ticker.rs  users.rs
src/models/: error.rs  mod.rs  time.rs
tests/: integration_tests.rs  ticker_tests.rs  wasm.rs
tests/integration/: alerts_tests.rs  margins_tests.rs  markets_tests.rs  mf_tests.rs  mock_server.rs  mod.rs  order_tests.rs  portfolio_tests.rs  user_auth_tests.rs
