[package]
name = "kiteconnect-rs"
version = "0.1.0"
edition = "2021"
authors = ["ketan"]
license = "MIT"
description = "A Rust client for communicating with the Kite Connect API"
repository = "https://github.com/ketan-10/kiteconnect-rs"
homepage = "https://github.com/ketan-10/kiteconnect-rs"
documentation = "https://docs.rs/kiteconnect-rs"
readme = "Readme.md"
keywords = ["trading", "api", "kite", "zerodha", "finance"]
categories = ["api-bindings", "web-programming::http-client"]
exclude = [
    "target/*",
    "tests/mocks/*",
    ".git/*",
    ".github/*"
]

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
sha2 = "0.10.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
indoc = "2.0.6"
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
url = "2.4"
futures-util = "0.3"
log = "0.4"

[dev-dependencies]
mockito = "1.5"
httpmock = "0.7"
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3.8"
base64 = "0.22"
