[package]
name = "wasm-example"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
kiteconnect-rs = { path = "../.." }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlDivElement",
    "Window",
    "Event",
    "EventTarget",
] }
js-sys = "0.3"
web-time = "1.1"
console_error_panic_hook = "0.1"
